Fix isBlank().